--- a/static/setup.html
+++ b/static/setup.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-<h1><img src="icon.png"> Please follow this instructions <img src="icon.png"></h1>
+<h1><img src="rocket.svg"> Please follow this instructions <img src="rocket.svg"></h1>
 <h2>As in Firefox preloading is deactivated by default, you have to activate it.</h2>
 <div> <h2>Three easy steps</h2>
  <video width="100%%" height="500" autoplay loop muted controls>
