Fix typo in setup instructions

--- a/static/setup.html
+++ b/static/setup.html
@@ -17,6 +17,6 @@
 <li>Search for <code>network.predictor.enable-prefetch</code> and set it to <code>true</code>
 </ol>
 </div>
-<p>If there are problems comming up, do not hesitate to ask: <a href="mailto:fasterpageload@simon-frey.eu">fasterpageload@simon-frey.eu</a></p>
+<p>If there are problems coming up, do not hesitate to ask: <a href="mailto:fasterpageload@simon-frey.eu">fasterpageload@simon-frey.eu</a></p>
 </body>
 </html>
